--- a/render.yaml
+++ b/render.yaml
@@ -3,15 +3,13 @@ services:
     name: idearpit
     env: node
     plan: free
-    buildCommand: npm install && npm run db:setup
+    buildCommand: npm install && npm run build && npm run deploy:prod
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        fromDatabase:
-          name: idearpit-db
-          property: connectionString
+        value: postgresql://neondb_owner:npg_fgahGqk3trW1@ep-lingering-smoke-a70s84j6-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
       - key: JWT_SECRET
         generateValue: true
     healthCheckPath: /
