--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "db:seed": "node prisma/seed.js",
     "db:setup": "node setup-postgresql.js",
     "deploy:prod": "node deploy-production.js",
+    "build:prod": "node build-production.js",
     "postinstall": "npx prisma generate"
   },
   "prisma": {
