--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: idearpit
     env: node
     plan: free
-    buildCommand: npm run build:prod
+    buildCommand: npm ci && npm run build:prod
     startCommand: npm start
     envVars:
       - key: NODE_ENV
