--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: idearpit
     env: node
     plan: free
-    buildCommand: npm ci && npm run build:prod
+    buildCommand: chmod +x render-build.sh && ./render-build.sh
     startCommand: npm start
     envVars:
       - key: NODE_ENV
